# domain-benchmark

./: README.md  domain.py  main.py  parrot_api.py  plain.py  pyproject.toml  pytest.ini  test_everything.py  test_everything_via_a_request.py  validation.py
.benchmarks/Linux-CPython-3.8-64bit/: 0001_happy_path.json  0002_happy_path.json  0003_sad_path.json  0004_sad_path.json  0005_happy_web_path.json  0006_happy_web_path.json
