[tool.poetry]
name = "domain-objects-bench"
version = "0.1.0"
description = ""
authors = ["steve <steve@meadsteve.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
pytest-benchmark = "^3.4.1"
starlite = "^1.32.0"
uvicorn = "^0.19.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
